# hybrid-memory

./: .gitignore  CLAUDE.md  README.md  install.py  pyproject.toml  temp_check.js
.claude/: mcp.json  settings.local.json
.claude/hooks/: background_summary.py  permissionRequest.py  postToolUse.py  sessionStart.py  stop.py  userPromptSubmit.py
src/cli/: main.py
src/http_api/: app.py  dashboard.py
src/mcp_server/: server.py
src/memory_core/: __init__.py  config.py  content_processor.py  database.py  decision_extractor.py  embedding_client.py  events.py  hook_utils.py  knowledge_extractor.py  llm_client.py  long_term.py  manager.py  models.py  prompts.py  retriever.py  short_term.py  summarizer.py  vector_store.py
