[project]
name = "hybrid-memory"
version = "0.1.0"
description = "A lightweight long-term memory system with short-term sliding window and auto-summarization"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.3.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "anthropic>=0.18.0",
    "httpx>=0.27.0",
    "click>=8.1.0",
    "pydantic>=2.6.0",
    "loguru>=0.7.0",
    "flask>=3.0.0",
    "rapidfuzz>=3.0.0",
    "ollama>=0.4.0",
    "faiss-cpu>=1.7.0",
    "numpy>=1.24.0",
    "rank-bm25>=0.2.0",
    "jieba>=0.42.0",
]

[project.scripts]
hybrid-memory = "cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
